spacing fix

--- a/styles/3-components/__References.scss
+++ b/styles/3-components/__References.scss
@@ -23,6 +23,10 @@
     h4, h5, h6 {
         font-size: 1.8rem;
     }
+    
+    h1, h2, h3, h4, h5, h6 {
+        margin-top: 15px;
+    }
 
     ul {
         list-style: initial !important;
